Fixes of structural patterns